<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutTheIdeaFragment"
    android:background="@drawable/background_main">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutTheIdeaTextTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/sobre_a_ideia"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutTheIdeaTextDescription1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/description_1"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTheIdeaTextTittle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutTheIdeaTextDescription2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/description_2"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTheIdeaTextDescription1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutTheIdeaTextDescription3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/description_3"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutTheIdeaTextDescription2" />

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/playButtonAboutTheIdea"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:text="@string/jogar"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="18sp"-->
<!--        android:background="@drawable/background_button_4dp"-->
<!--        android:layout_marginTop="24dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/aboutTheIdeaTextDescription3"-->
<!--        android:textAllCaps="false"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>